# qtweb-react

./: .gitignore  CMakeLists.txt  README.md  generate_qrc.py
scripts/: build.sh
src/: main.cpp
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src/pages/: About.tsx  Home.tsx  Info.tsx
